--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,15 @@
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  height: 300px;
+  width: 300px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
