--- a/src/Pages/Contact/classes.module.scss
+++ b/src/Pages/Contact/classes.module.scss
@@ -1,5 +1,16 @@
 .container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    margin: auto 0;
     h1{
+        text-align: center;
+    }
+    img{
+        width: 300px;
+        height: 300px;
         text-align: center;
     }
     .info{
@@ -10,27 +21,44 @@
     }
 
     .contactCard{
-        border: 1px solid gray;
+        border: 0px solid gray;
         border-radius: 30px;
         padding: 50px;
         width: 300px;
-        height: 100px;
+        height: 80px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        margin: 10px;
+
+      
         h3 {
             color: whitesmoke;
             font-size: 22px;
+            text-align: center;
         }
         p,a{
             font-size: 16px;
             color: white;
+            text-align: center;
+        }
+        div{
+            text-align: center;
+        }
+
+        .icons{
+            width: 50px;
+            height: 50px;
         }
     }
     .phone{
-        background-color: green;
+        background-color: #666666;
     }
     .adresse{
-        background-color: black;
+        background-color: #666666;
     }
     .mail{
-        background-color: blue;
+        background-color: #666666;
     }
 }
