--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,10 +1,11 @@
 .container {
-  background-color: black;
+  background-color: #111111;
   padding: 20px;
   .menuLinks {
     text-transform: none;
     margin-left: 50px;
-    font-weight: bold;
+    font-weight: bold !important;
+    font-size: 16px;
   }
   .logo {
     vertical-align: middle;
