--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -4,7 +4,7 @@
   .menuLinks {
     text-transform: none;
     margin-left: 50px;
-    font-weight: bold !important;
+    font-weight: 400 !important;
     font-size: 16px;
   }
   .logo {
@@ -12,5 +12,9 @@
     &:hover {
       cursor: pointer;
     }
+  }
+  .menuButton{
+    padding: 0;
+    margin: 0;
   }
 }
