--- a/src/components/ProjectCard/styles.module.scss
+++ b/src/components/ProjectCard/styles.module.scss
@@ -1,31 +1,29 @@
-@import '../../mixins.scss';
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;1,100&display=swap');
+@import "../../mixins.scss";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;1,100&display=swap");
 
 .container {
   // width: 25%;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   border: 0px solid black;
   //   border-radius: 10px;
-  background-color: #e3e3e3;
+  background-color: #fff;
   width: 1197px;
   height: 270px;
   margin: auto;
   justify-content: space-between;
 
-  .titleContainer{
+  .titleContainer {
     display: flex;
     flex-direction: row;
     align-items: center;
-    h2{
-        font-family: 'Montserrat', sans-serif;
-        font-size: 20px;
-        color: black;
-        font-weight: 600;
-        padding-left: 12px;
+    h2 {
+      font-family: "Montserrat", sans-serif;
+      font-size: 20px;
+      color: black;
+      font-weight: 600;
+      padding-left: 12px;
     }
   }
-
- 
 
   @include from-breakpoint(phone) {
     width: auto;
@@ -63,7 +61,7 @@
     overflow: auto;
     max-height: 92px;
     @include from-breakpoint(phone) {
-        font-size: 14px;
+      font-size: 14px;
     }
   }
 }
