--- a/src/index.scss
+++ b/src/index.scss
@@ -27,3 +27,34 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+.card-container {
+  padding: 2rem;
+  justify-content: center;
+  text-align: center;
+  display: flex;
+}
+
+.main-container {
+  // padding: 5rem 10rem 5rem 10rem;
+  text-align: left;
+}
+
+.text-center {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.team-text {
+  font-size: 15px;
+}
+
+.is-flex {
+  display: flex;
+}
+
+.team-card-container {
+  flex-wrap: wrap;
+  justify-content: center;
+}
