--- a/src/index.scss
+++ b/src/index.scss
@@ -32,14 +32,13 @@ code {
 }
 
 .card-container {
-  padding: 2rem;
   justify-content: center;
   text-align: center;
   display: flex;
 }
 
 .main-container {
-  // padding: 5rem 10rem 5rem 10rem;
+  padding: 2rem 10rem 2rem 10rem;
   text-align: left;
 }
 
