--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,10 +1,10 @@
 .container {
-  background-color: #111111;
+  background-color: #111;
   padding: 20px;
   .menuLinks {
     text-transform: none;
     margin-left: 50px;
-    font-weight: 300 !important;
+    font-weight: 400;
     font-size: 16px;
   }
   .logo {
@@ -13,7 +13,7 @@
       cursor: pointer;
     }
   }
-  .menuButton{
+  .menuButton {
     padding: 0 !important;
     margin: 0 !important;
   }
